--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,6 +30,8 @@ jobs:
       - name: Build
         run: make build
       - uses: engineerd/setup-kind@v0.3.0
+        with:
+          version: "v0.7.0"
       - name: Integration test
         run: |
           kubectl create ns test
