--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,8 +32,13 @@ jobs:
       - uses: engineerd/setup-kind@v0.3.0
         with:
           version: "v0.7.0"
-      - name: Integration test
+      - name: Integration test (job completed)
         run: |
           kubectl create ns test
           kubectl -n test apply -f examples/curl.yaml
-          bin/kjob run --kubeconfig=$HOME/.kube/config -t curl -n test
+          bin/kjob run -t curl -n test
+      - name: Integration test (job failed)
+        run: |
+          if bin/kjob run -t curl-fail -n test; then
+              exit 1
+          fi
