--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,8 +3,8 @@ name: ci
 on:
   pull_request:
   push:
-    branches-ignore:
-      - gh-pages
+    branches:
+      - master
     tags-ignore:
       - v.*
 
